--- a/jenkins-pipeline/task3/Jenkinsfile
+++ b/jenkins-pipeline/task3/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
         stage('docker-build/push-registry') {
             steps {
                 sh '''#!/usr/bin/env bash
-                sudo chmod 666 /var/run/docker.sock
+                sudo usermod -aG docker jenkins
                 cd app_code
                 docker login -u ${DOCKER_REGISTRY_USERNAME} -p ${DOCKER_REGISTRY_PASSWORD}
                 docker build --tag "${REGISTRY_NAME}/nodejs-demo:${BUILD_NUMBER}" .
