--- a/jenkins-pipeline/task3/Jenkinsfile
+++ b/jenkins-pipeline/task3/Jenkinsfile
@@ -17,8 +17,9 @@ pipeline {
         stage('docker-build/push-registry') {
             steps {
                 sh '''#!/usr/bin/env bash
-                sudo -i
-                usermod -aG docker jenkins
+                whoami
+                echo "123 test"
+                sudo usermod -aG docker jenkins
                 cd app_code
                 docker login -u ${DOCKER_REGISTRY_USERNAME} -p ${DOCKER_REGISTRY_PASSWORD}
                 docker build --tag "${REGISTRY_NAME}/nodejs-demo:${BUILD_NUMBER}" .
