--- a/jenkins-pipeline/task3/Jenkinsfile
+++ b/jenkins-pipeline/task3/Jenkinsfile
@@ -18,7 +18,9 @@ pipeline {
             steps {
                 sh '''#!/usr/bin/env bash
                 whoami
-                echo "123 test"
+                echo ${REGISTRY_NAME}
+                echo ${DOCKER_REGISTRY_USERNAME}
+                echo ${DOCKER_REGISTRY_PASSWORD}
                 cd app_code
                 docker login -u ${DOCKER_REGISTRY_USERNAME} -p ${DOCKER_REGISTRY_PASSWORD}
                 docker build --tag "${REGISTRY_NAME}/nodejs-demo:${BUILD_NUMBER}" .
